session21-python/HW/final-devops-project/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p21-taskboard
  labels:
    app.kubernetes.io/part-of: taskboard
